--- a/app/globals.css
+++ b/app/globals.css
@@ -131,6 +131,11 @@ ul {
   background-color: #2d2d2b;
 }
 
+.fullscreen-image img{
+  width:  100%;
+  object-fit: contain;
+}
+
 .modal-backdrop {
   position: fixed;
   top: 0;
